🔧 第九阶段修复：API动态URL配置 + Docker标签增强
- 修复前端API基础URL硬编码问题
- 使用 window.location.origin + '/api' 实现动态URL配置
- 兼容开发环境(Vite代理)和生产环境(直接访问)
- 解决容器中API连接失败问题 (net::ERR_CONNECTION_REFUSED)
- 增强Docker镜像标签：stable, 日期标签, SHA标签等
- 确保所有环境下前后端通信正常

这是第九阶段修复：解决静态模式下API连接失败的核心问题
前八阶段：CI/CD构建 + Express服务 + Astro配置修复
第九阶段：API动态URL配置 + Docker标签增强

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -124,6 +124,11 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=raw,value=latest,enable={{is_default_branch}}
+            # 添加更多标签
+            type=raw,value=stable,enable={{is_default_branch}}
+            type=raw,value={{date 'YYYY-MM-DD'}},enable={{is_default_branch}}
+            type=sha,prefix={{branch}}-
+            type=raw,value={{branch}}-{{sha}},enable=true
           labels: |
             org.opencontainers.image.title=DomMate
             org.opencontainers.image.description=Professional Domain Expiration Monitoring Platform
