🔧 第十二阶段修复：数据持久化配置问题
- 修改数据库文件路径：从项目根目录移至 /app/data 目录
- 使用环境变量 DATABASE_PATH 配置数据库路径，支持灵活部署
- 添加数据目录自动创建逻辑，确保启动时目录存在
- 更新 env.example 配置，指向持久化目录路径
- 在 Dockerfile 中设置环境变量，确保容器内配置正确
- 解决 Docker Volume 挂载失效问题，实现真正的数据持久化

这是第十二阶段修复：解决Docker容器数据持久化配置问题
前十一阶段：CI/CD + Express + Astro + API + 认证修复
第十二阶段：数据持久化配置修复，确保容器重启后数据不丢失

--- a/env.example
+++ b/env.example
@@ -5,11 +5,11 @@
 # DATABASE CONFIGURATION
 # =================================================================
 
-# SQLite database file path (relative to project root)
-DATABASE_PATH=./domains.db
+# SQLite database file path (for Docker containers, use /app/data for persistence)
+DATABASE_PATH=/app/data/domains.db
 
-# Database backup directory
-BACKUP_DIR=./backups
+# Database backup directory (ensure this is also in a persistent location)
+BACKUP_DIR=/app/data/backups
 
 # =================================================================
 # SERVER CONFIGURATION
