--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -116,7 +116,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
           
       - name: Verify GitHub Container Registry access
         if: github.event_name != 'pull_request'
