--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,5 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# 用于预构建镜像的 .dockerignore
+# 注意：这个版本允许 node_modules 和 dist
 
 # Environment files
 .env*
@@ -47,8 +43,7 @@ coverage/
 *.lcov
 .nyc_output/
 
-# Build outputs (will be generated in container)
-dist/
+# Build outputs - 这里不排除dist和node_modules，因为我们需要它们
 .astro/
 .output/
 .vercel/
@@ -68,7 +63,7 @@ dist/
 # Docker files (avoid recursion)
 Dockerfile*
 docker-compose*.yml
-.dockerignore
+.dockerignore*
 
 # Docker data
 docker-data/
