--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Images (Ubuntu 24.04 + Node.js 22)
+name: Build and Push Docker Images
 
 on:
   # Trigger on push to main branch
@@ -49,57 +49,50 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
       - name: Install dependencies with retry
         run: |
-          echo "🔧 安装依赖包..."
-          npm cache clean --force
-          for i in {1..3}; do
-            echo "尝试第 $i 次安装..."
-            if npm install --legacy-peer-deps --no-audit --no-fund; then
-              echo "✅ 依赖安装成功"
-              break
-            else
-              echo "❌ 第 $i 次安装失败"
-              if [ $i -eq 3 ]; then
-                echo "💥 所有安装尝试都失败了"
-                exit 1
-              fi
-              sleep 5
-            fi
-          done
+          set -e
+          echo "🔄 安装依赖..."
+          npm install --legacy-peer-deps || {
+            echo "首次安装失败，清理后重试..."
+            rm -rf node_modules package-lock.json
+            npm install --legacy-peer-deps
+          }
 
-      - name: Verify Node.js and npm setup
+      - name: Verify installation
         run: |
-          echo "📊 环境验证:"
-          echo "- Node.js版本: $(node --version)"
-          echo "- npm版本: $(npm --version)"
-          echo "- 系统架构: $(uname -m)"
-          echo "- 已安装包数量: $(ls node_modules | wc -l)"
-          echo "✅ 环境验证完成"
+          echo "📊 Node.js 版本: $(node --version)"
+          echo "📊 npm 版本: $(npm --version)"
+          echo "📦 已安装包数量: $(ls node_modules | wc -l)"
 
-      - name: Run linter (if available)
-        run: |
-          echo "🔍 代码质量检查..."
-          if npm run lint --if-present; then
-            echo "✅ 代码质量检查通过"
-          else
-            echo "⚠️ 代码质量检查跳过或失败（非阻塞）"
-          fi
+      - name: Run linter
+        run: npm run lint --if-present
         continue-on-error: true
 
-      - name: Test server startup (quick check)
-        run: |
-          echo "🚀 快速服务器启动测试..."
-          timeout 10s npm run server > server.log 2>&1 || true
-          if grep -q "DomMate" server.log; then
-            echo "✅ 服务器启动测试通过"
-          else
-            echo "⚠️ 服务器启动测试未完成（将在Docker中完整测试）"
-          fi
-          echo "📋 服务器日志片段:"
-          head -10 server.log || echo "无日志输出"
+      - name: Run tests
+        run: npm test --if-present
+        continue-on-error: true
 
-  # Build and push Docker images
+      - name: Test frontend build
+        run: |
+          echo "🏗️ 测试前端构建..."
+          npm run build || {
+            echo "标准构建失败，尝试备选方案..."
+            npm run build --skip-type-check || {
+              echo "跳过类型检查构建失败，尝试rollup修复..."
+              rm -rf node_modules/@rollup/ node_modules/rollup
+              npm install @rollup/rollup-linux-x64-musl --optional --legacy-peer-deps
+              npm run build
+            }
+          }
+          
+          echo "✅ 前端构建测试完成"
+          ls -la dist/
+
+  # Build and push Docker image
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -131,16 +124,13 @@ jobs:
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
             type=raw,value=stable,enable={{is_default_branch}}
-            type=raw,value=ubuntu24,enable={{is_default_branch}}
-            type=raw,value=ci-cd,enable={{is_default_branch}}
             type=raw,value={{date 'YYYY-MM-DD'}},enable={{is_default_branch}}
             type=sha,prefix={{branch}}-
 
-      - name: Build and push Docker image (CI/CD Optimized - Ubuntu 24.04 + Node.js 22)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.ci-simple
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
@@ -148,9 +138,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            NODE_VERSION=22.17.1
-            UBUNTU_VERSION=24.04
-            BUILDKIT_INLINE_CACHE=1
+            NODE_VERSION=22
 
       - name: Generate SBOM
         if: github.event_name != 'pull_request'
@@ -160,133 +148,141 @@ jobs:
           format: spdx-json
           output-file: sbom.spdx.json
 
-      - name: Upload SBOM as artifact
+      - name: Upload SBOM
         if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: sbom-ubuntu24
+          name: sbom
           path: sbom.spdx.json
 
+  # Security scanning
+  security-scan:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    steps:
       - name: Run Trivy vulnerability scanner
-        if: github.event_name != 'pull_request'
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           format: 'sarif'
-          output: 'trivy-results-ubuntu24.sarif'
+          output: 'trivy-results.sarif'
 
-      - name: Upload Trivy scan results as artifact
-        if: github.event_name != 'pull_request'
+      - name: Upload Trivy scan results
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-scan-results-ubuntu24
-          path: trivy-results-ubuntu24.sarif
+          name: trivy-scan-results
+          path: trivy-results.sarif
 
-      - name: Upload Trivy scan results to GitHub Security tab
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results-ubuntu24.sarif'
-
-  # Test Docker container deployment
-  deploy-test:
-    needs: build
+  # Test deployment
+  deploy-staging:
+    needs: [build, security-scan]
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
       - name: Test container deployment
         run: |
-          echo "🐳 测试容器部署..."
+          echo "🧪 测试容器部署..."
           
-          # Pull the built image
+          # 拉取镜像
           docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           
-          # Run container in background
-          docker run -d --name dommate-test \
+          # 创建测试volume
+          docker volume create dommate-test-data
+          
+          # 启动容器
+          docker run -d \
+            --name dommate-test \
             -p 3001:3001 \
             -v dommate-test-data:/app/data \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           
-          # Wait for container to start
-          echo "⏳ 等待容器启动..."
+          # 等待启动
+          echo "⏳ 等待应用启动..."
           sleep 30
           
-          # Check container status
-          docker ps | grep dommate-test
-          
-          # Test health check
-          echo "❤️ 测试健康检查..."
+          # 检查健康状态
           for i in {1..10}; do
             if curl -f http://localhost:3001/health; then
               echo "✅ 健康检查通过"
               break
             else
-              echo "⏳ 等待健康检查... ($i/10)"
+              echo "⏳ 等待应用就绪... ($i/10)"
               sleep 10
             fi
           done
           
-          # Test frontend
-          echo "🌐 测试前端访问..."
-          curl -I http://localhost:3001/ | head -1
+          # 检查前端
+          if curl -f http://localhost:3001/; then
+            echo "✅ 前端页面可访问"
+          else
+            echo "❌ 前端页面不可访问"
+            exit 1
+          fi
           
-          # Show container logs
-          echo "📝 容器日志:"
-          docker logs dommate-test | tail -20
+          # 显示日志
+          echo "📋 容器日志:"
+          docker logs dommate-test
           
-          # Clean up
+          # 清理
           docker stop dommate-test
           docker rm dommate-test
           docker volume rm dommate-test-data
 
-  # Create release summary
-  release:
-    needs: [build, deploy-test]
+  # Cleanup old versions
+  cleanup:
+    needs: deploy-staging
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+    if: github.event_name != 'pull_request'
+    continue-on-error: true
+    steps:
+      - name: Delete old container images
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: 'dommate'
+          package-type: 'container'
+          min-versions-to-keep: 5
+          delete-only-untagged-versions: true
+
+  # Create release
+  release:
+    needs: [deploy-staging]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Create deployment summary
         run: |
-          echo "# 🚀 DomMate Docker 部署完成" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 DomMate 部署成功！" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## 📊 构建信息" >> $GITHUB_STEP_SUMMARY
-          echo "- **基础镜像**: Ubuntu 24.04 LTS" >> $GITHUB_STEP_SUMMARY
-          echo "- **Node.js版本**: 22.17.1" >> $GITHUB_STEP_SUMMARY
-          echo "- **架构支持**: AMD64, ARM64" >> $GITHUB_STEP_SUMMARY
-          echo "- **构建时间**: $(date)" >> $GITHUB_STEP_SUMMARY
-          echo "- **镜像仓库**: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}" >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 镜像信息" >> $GITHUB_STEP_SUMMARY
+          echo "- **镜像地址**: \`${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **支持架构**: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
+          echo "- **Node.js版本**: 22" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## 🐳 快速启动" >> $GITHUB_STEP_SUMMARY
+          echo "### 🚀 快速部署" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
-          echo "# 拉取最新镜像" >> $GITHUB_STEP_SUMMARY
-          echo "docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "# 启动容器" >> $GITHUB_STEP_SUMMARY
-          echo "docker run -d --name dommate \\" >> $GITHUB_STEP_SUMMARY
+          echo "docker run -d \\" >> $GITHUB_STEP_SUMMARY
+          echo "  --name dommate \\" >> $GITHUB_STEP_SUMMARY
           echo "  -p 3001:3001 \\" >> $GITHUB_STEP_SUMMARY
           echo "  -v dommate-data:/app/data \\" >> $GITHUB_STEP_SUMMARY
           echo "  ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## 🌐 访问地址" >> $GITHUB_STEP_SUMMARY
-          echo "- 主页: http://localhost:3001" >> $GITHUB_STEP_SUMMARY
-          echo "- 英文版: http://localhost:3001/en/" >> $GITHUB_STEP_SUMMARY
-          echo "- 健康检查: http://localhost:3001/health" >> $GITHUB_STEP_SUMMARY
-          echo "- API接口: http://localhost:3001/api/" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ **部署成功！DomMate 已准备就绪！**" >> $GITHUB_STEP_SUMMARY
+          echo "### 🔗 访问地址" >> $GITHUB_STEP_SUMMARY
+          echo "- **主页**: http://localhost:3001" >> $GITHUB_STEP_SUMMARY
+          echo "- **英文版**: http://localhost:3001/en" >> $GITHUB_STEP_SUMMARY
+          echo "- **健康检查**: http://localhost:3001/health" >> $GITHUB_STEP_SUMMARY
 
-  # Clean up old packages
-  cleanup:
-    needs: release
+  # Production deployment placeholder
+  deploy-production:
+    needs: [release]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
     steps:
-      - name: Delete old container images
-        uses: actions/delete-package-versions@v4
-        continue-on-error: true
-        with:
-          package-name: 'dommate'
-          package-type: 'container'
-          min-versions-to-keep: 5
-          delete-only-untagged-versions: false 
+      - name: Production deployment ready
+        run: |
+          echo "🎯 生产环境部署就绪"
+          echo "镜像: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+          echo "请使用以下命令部署到生产环境："
+          echo "docker run -d --name dommate -p 3001:3001 -v dommate-data:/app/data ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest" 
