--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -100,34 +100,7 @@ jobs:
             # 尝试2: 创建最小化前端构建
             echo "🔧 创建fallback构建..."
             mkdir -p dist
-            cat > dist/index.html << 'EOF'
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DomMate - 域名监控系统</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-        .container { max-width: 600px; margin: 0 auto; }
-        .status { color: #28a745; font-size: 18px; margin: 20px 0; }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🚀 DomMate</h1>
-        <p class="status">✅ Docker容器构建成功</p>
-        <p>前端资源将在容器内完成构建</p>
-        <p>请稍等片刻，系统正在初始化...</p>
-    </div>
-    <script>
-        setTimeout(() => {
-            window.location.reload();
-        }, 3000);
-    </script>
-</body>
-</html>
-EOF
+            echo '<!DOCTYPE html><html lang="zh-CN"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>DomMate - 域名监控系统</title><style>body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f5f5f5; } .container { max-width: 600px; margin: 0 auto; background: white; padding: 40px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); } .status { color: #28a745; font-size: 18px; margin: 20px 0; }</style></head><body><div class="container"><h1>🚀 DomMate</h1><p class="status">✅ Docker容器构建成功</p><p>前端资源将在容器内完成构建</p><p>请稍等片刻，系统正在初始化...</p></div><script>setTimeout(() => { window.location.reload(); }, 3000);</script></body></html>' > dist/index.html
             echo "✅ 创建了fallback构建，Docker将处理完整构建"
             BUILD_SUCCESS=true
           fi
