🔧 修复GHCR镜像名称大小写问题
- 将IMAGE_NAME从github.repository改为github.repository_owner/dommate
- 确保使用小写dommate避免GHCR权限问题
- 解决permission_denied: write_package错误
- Docker构建本身已成功，只需修复推送权限

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,7 +29,7 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/dommate
 
 jobs:
   test:
